--- a/src/app/medias/media-list/media-list.component.html
+++ b/src/app/medias/media-list/media-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  media-list works!
-</p>
+<div>{{ items | distinctCategories }}</div>
+   
+<media-item *ngFor="let mediaItem of items" [mediaItem]="mediaItem" (delete)="onMediaItemDelete($event)">
+
+</media-item>
