--- a/src/app/medias/media-form/media-form.component.html
+++ b/src/app/medias/media-form/media-form.component.html
@@ -1,3 +1,39 @@
-<p>
-  media-form works!
-</p>
+<header>
+  <h2>Add a Media Item</h2>
+</header>
+<form
+  [formGroup]="mediaForm"
+  (ngSubmit)="onSubmit(mediaForm.value)">
+  <ul>
+    <li>
+      <label for="mediaType">Medium Type</label>
+      <select name="mediaType" id="mediaType" formControlName="mediaType">
+        <!--<option *ngFor="let mediaType of mediaTypes" value="{{mediaType}}">{{mediaType}}</option>-->
+      </select>
+    </li>
+    <li>
+      <label for="title">Title</label>
+      <input type="text" name="title" id="title" formControlName="title">
+      <!--
+      <div *ngIf="form.controls.name.errors?.pattern" class="error">
+        Name has invalid characters
+      </di>-->
+    </li>
+    <li>
+      <label for="category">Category</label>
+      <select name="category" id="category" formControlName="category">
+        <option value="React">React</option>
+        <option value="Angular 2">Angular 2</option>
+        <option value="Ionic">Ionic</option>
+        <option value="Redux">Redux</option>
+        <option value="Angular Material">Angular Material</option>
+        <option value="Firebase">Firebase</option>
+      </select>
+    </li>
+    <li>
+      <label for="id">Id</label>
+      <input type="number" name="id" id="id" formControlName="id">
+    </li>
+  </ul>
+  <button type="submit" [disabled]="!mediaForm.valid">Save</button>
+</form>
